@@ -16,7 +16,6 @@
  */
 package org.jkiss.dbeaver.registry.driver;
 
-import com.google.gson.stream.JsonWriter;
 import org.eclipse.core.runtime.IConfigurationElement;
 import org.eclipse.core.runtime.Platform;
 import org.jkiss.code.NotNull;
@@ -45,15 +44,15 @@ import org.jkiss.dbeaver.registry.NativeClientDescriptor;
 import org.jkiss.dbeaver.registry.RegistryConstants;
 import org.jkiss.dbeaver.registry.VersionUtils;
 import org.jkiss.dbeaver.runtime.DBWorkbench;
-import org.jkiss.dbeaver.utils.ContentUtils;
 import org.jkiss.dbeaver.utils.GeneralUtils;
+import org.jkiss.dbeaver.utils.RuntimeUtils;
 import org.jkiss.utils.ArrayUtils;
 import org.jkiss.utils.CommonUtils;
 import org.jkiss.utils.StandardConstants;
-import org.jkiss.utils.xml.XMLBuilder;
 
 import java.io.File;
 import java.io.IOException;
+import java.io.InputStream;
 import java.io.UnsupportedEncodingException;
 import java.net.MalformedURLException;
 import java.net.URL;
@@ -61,8 +60,11 @@ import java.net.URLClassLoader;
 import java.net.URLDecoder;
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.nio.file.StandardOpenOption;
 import java.util.*;
 import java.util.stream.Collectors;
+import java.util.stream.Stream;
+import java.util.zip.CRC32;
 
 /**
  * DriverDescriptor
@@ -70,7 +72,6 @@ import java.util.stream.Collectors;
 public class DriverDescriptor extends AbstractDescriptor implements DBPDriver {
     private static final Log log = Log.getLog(DriverDescriptor.class);
 
-    private static final String DRIVERS_FOLDER = "drivers"; //$NON-NLS-1$
     private static final String PROP_DRIVERS_LOCATION = "DRIVERS_LOCATION";
 
     private static final String LICENSE_ACCEPT_KEY = "driver.license.accept.";
@@ -88,9 +89,10 @@ public class DriverDescriptor extends AbstractDescriptor implements DBPDriver {
         private final String id;
         private final String version;
         private final DBPDriverLibrary.FileType type;
-        private final File file;
+        private final Path file;
+        private long fileCRC;
 
-        DriverFileInfo(String id, String version, DBPDriverLibrary.FileType type, File file) {
+        public DriverFileInfo(String id, String version, DBPDriverLibrary.FileType type, Path file) {
             this.id = id;
             this.version = version;
             this.file = file;
@@ -104,7 +106,7 @@ public class DriverDescriptor extends AbstractDescriptor implements DBPDriver {
             this.type = library.getType();
         }
 
-        public File getFile() {
+        public Path getFile() {
             return file;
         }
 
@@ -120,16 +122,34 @@ public class DriverDescriptor extends AbstractDescriptor implements DBPDriver {
             return type;
         }
 
+        public long getFileCRC() {
+            return fileCRC;
+        }
+
+        public void setFileCRC(long fileCRC) {
+            this.fileCRC = fileCRC;
+        }
+
         @Override
         public String toString() {
-            return file.getName();
+            return file.getFileName().toString();
+        }
+    }
+
+    private static class ReplaceInfo {
+        String providerId;
+        String driverId;
+
+        private ReplaceInfo(String providerId, String driverId) {
+            this.providerId = providerId;
+            this.driverId = driverId;
         }
     }
 
     private final DataSourceProviderDescriptor providerDescriptor;
     private final String id;
     private String category;
-    private List<String> categories;
+    private final List<String> categories;
     private String name;
     private String description;
     private String driverClassName;
@@ -155,6 +175,7 @@ public class DriverDescriptor extends AbstractDescriptor implements DBPDriver {
     private DBPImage iconError;
     private DBPImage iconBig;
     private boolean embedded, origEmbedded;
+    private boolean singleConnection;
     private boolean clientRequired;
     private boolean supportsDriverProperties;
     private boolean anonymousAccess, origAnonymousAccess;
@@ -169,6 +190,8 @@ public class DriverDescriptor extends AbstractDescriptor implements DBPDriver {
     private boolean disabled;
     private boolean temporary;
     private int promoted;
+
+    private Set<DBPDriverConfigurationType> configurationTypes = new HashSet<>(Collections.singleton(DBPDriverConfigurationType.MANUAL));
     private final List<DBPNativeClientLocation> nativeClientHomes = new ArrayList<>();
     private final List<DriverFileSource> fileSources = new ArrayList<>();
     private final List<DBPDriverLibrary> libraries = new ArrayList<>();
@@ -187,7 +210,7 @@ public class DriverDescriptor extends AbstractDescriptor implements DBPDriver {
 
     private final Map<DBPDriverLibrary, List<DriverFileInfo>> resolvedFiles = new HashMap<>();
 
-    private Class driverClass;
+    private Class<?> driverClass;
     private boolean isLoaded;
     private Object driverInstance;
     private DriverClassLoader classLoader;
@@ -196,7 +219,9 @@ public class DriverDescriptor extends AbstractDescriptor implements DBPDriver {
 
     static {
         Path driversHome = DriverDescriptor.getCustomDriversHome();
-        System.setProperty(PROP_DRIVERS_LOCATION, driversHome.toAbsolutePath().toString());
+        if (driversHome != null) {
+            System.setProperty(PROP_DRIVERS_LOCATION, driversHome.toAbsolutePath().toString());
+        }
     }
 
     private DriverDescriptor(String id) {
@@ -260,6 +285,7 @@ public class DriverDescriptor extends AbstractDescriptor implements DBPDriver {
             this.webURL = copyFrom.webURL;
             this.propertiesWebURL = copyFrom.webURL;
             this.embedded = copyFrom.embedded;
+            this.singleConnection = copyFrom.singleConnection;
             this.clientRequired = copyFrom.clientRequired;
             this.supportsDriverProperties = copyFrom.supportsDriverProperties;
             this.anonymousAccess = copyFrom.anonymousAccess;
@@ -288,6 +314,7 @@ public class DriverDescriptor extends AbstractDescriptor implements DBPDriver {
 
             this.defaultConnectionProperties.putAll(copyFrom.defaultConnectionProperties);
             this.customConnectionProperties.putAll(copyFrom.customConnectionProperties);
+            this.configurationTypes.addAll(copyFrom.configurationTypes);
         } else {
             this.categories = new ArrayList<>();
             this.name = "";
@@ -321,6 +348,7 @@ public class DriverDescriptor extends AbstractDescriptor implements DBPDriver {
         this.supportsDriverProperties = CommonUtils.getBoolean(config.getAttribute(RegistryConstants.ATTR_SUPPORTS_DRIVER_PROPERTIES), true);
         this.origInstantiable = this.instantiable = CommonUtils.getBoolean(config.getAttribute(RegistryConstants.ATTR_INSTANTIABLE), true);
         this.origEmbedded = this.embedded = CommonUtils.getBoolean(config.getAttribute(RegistryConstants.ATTR_EMBEDDED));
+        this.singleConnection = CommonUtils.getBoolean(config.getAttribute(RegistryConstants.ATTR_SINGLE_CONNECTION));
         this.origAnonymousAccess = this.anonymousAccess = CommonUtils.getBoolean(config.getAttribute(RegistryConstants.ATTR_ANONYMOUS));
         this.origAllowsEmptyPassword = this.allowsEmptyPassword = CommonUtils.getBoolean("allowsEmptyPassword");
         this.licenseRequired = CommonUtils.getBoolean(config.getAttribute(RegistryConstants.ATTR_LICENSE_REQUIRED));
@@ -334,6 +362,14 @@ public class DriverDescriptor extends AbstractDescriptor implements DBPDriver {
             }
         }
         this.origFiles.addAll(this.libraries);
+
+        String[] supportedConfigurationTypes = CommonUtils.split(
+            config.getAttribute(RegistryConstants.ATTR_SUPPORTED_CONFIGURATION_TYPES), ",");
+        if (supportedConfigurationTypes.length > 0) {
+            this.configurationTypes = Stream.of(supportedConfigurationTypes)
+                .map(DBPDriverConfigurationType::valueOf)
+                .collect(Collectors.toSet());
+        }
 
         for (IConfigurationElement lib : config.getChildren(RegistryConstants.TAG_FILE_SOURCE)) {
             this.fileSources.add(new DriverFileSource(lib));
@@ -644,13 +680,16 @@ public class DriverDescriptor extends AbstractDescriptor implements DBPDriver {
         this.driverInstance = null;
         this.driverClass = null;
         this.isLoaded = false;
-        this.resolvedFiles.clear();
+
+        if (!isDistributedMode()) {
+            this.resolvedFiles.clear();
+        }
     }
 
     private Object createDriverInstance()
             throws DBException {
         try {
-            return driverClass.newInstance();
+            return driverClass.getConstructor().newInstance();
         } catch (InstantiationException ex) {
             throw new DBException("Can't instantiate driver class", ex);
         } catch (IllegalAccessException ex) {
@@ -766,6 +805,15 @@ public class DriverDescriptor extends AbstractDescriptor implements DBPDriver {
 
     public void setEmbedded(boolean embedded) {
         this.embedded = embedded;
+    }
+
+    @Override
+    public boolean isSingleConnection() {
+        return singleConnection;
+    }
+
+    public void setSingleConnection(boolean singleConnection) {
+        this.singleConnection = singleConnection;
     }
 
     @Override
@@ -885,6 +933,11 @@ public class DriverDescriptor extends AbstractDescriptor implements DBPDriver {
         return libraries;
     }
 
+    public void setDriverLibraries(List<? extends DBPDriverLibrary> libs) {
+        this.libraries.clear();
+        this.libraries.addAll(libs);
+    }
+
     public List<DBPDriverLibrary> getEnabledDriverLibraries() {
         List<DBPDriverLibrary> filtered = new ArrayList<>();
         for (DBPDriverLibrary lib : libraries) {
@@ -904,7 +957,7 @@ public class DriverDescriptor extends AbstractDescriptor implements DBPDriver {
         return null;
     }
 
-    void addLibraryFile(DBPDriverLibrary library, DriverFileInfo fileInfo) {
+    public void addLibraryFile(DBPDriverLibrary library, DriverFileInfo fileInfo) {
         List<DriverFileInfo> files = resolvedFiles.computeIfAbsent(library, k -> new ArrayList<>());
         files.add(fileInfo);
     }
@@ -1040,10 +1093,10 @@ public class DriverDescriptor extends AbstractDescriptor implements DBPDriver {
     public String getLicense() {
         for (DBPDriverLibrary file : libraries) {
             if (file.getType() == DBPDriverLibrary.FileType.license) {
-                final File licenseFile = file.getLocalFile();
-                if (licenseFile != null && licenseFile.exists()) {
+                final Path licenseFile = file.getLocalFile();
+                if (licenseFile != null && Files.exists(licenseFile)) {
                     try {
-                        return ContentUtils.readFileToString(licenseFile);
+                        return Files.readString(licenseFile);
                     } catch (IOException e) {
                         log.warn(e);
                     }
@@ -1064,7 +1117,7 @@ public class DriverDescriptor extends AbstractDescriptor implements DBPDriver {
     }
 
     @Override
-    public String getConnectionURL(DBPConnectionConfiguration connectionInfo) {
+    public String getConnectionURL(@NotNull DBPConnectionConfiguration connectionInfo) {
         if (isSampleURLForced()) {
             // Generate URL by template
             return JDBCURL.generateUrlByTemplate(this, connectionInfo);
@@ -1105,7 +1158,7 @@ public class DriverDescriptor extends AbstractDescriptor implements DBPDriver {
         isLoaded = false;
 
         loadGlobalLibraries();
-        loadLibraries();
+        loadLibraries(monitor);
 
         if (licenseRequired) {
             String licenseText = getLicense();
@@ -1138,17 +1191,17 @@ public class DriverDescriptor extends AbstractDescriptor implements DBPDriver {
         }
     }
 
-    private void loadLibraries() throws DBException {
+    private void loadLibraries(DBRProgressMonitor monitor) throws DBException {
         this.classLoader = null;
 
-        List<File> allLibraryFiles = validateFilesPresence(false);
+        List<Path> allLibraryFiles = validateFilesPresence(false);
 
         List<URL> libraryURLs = new ArrayList<>();
         // Load libraries
-        for (File file : allLibraryFiles) {
+        for (Path file : allLibraryFiles) {
             URL url;
             try {
-                url = file.toURI().toURL();
+                url = file.toUri().toURL();
             } catch (MalformedURLException e) {
                 log.error(e);
                 continue;
@@ -1196,7 +1249,7 @@ public class DriverDescriptor extends AbstractDescriptor implements DBPDriver {
         return rootClassLoader;
     }
 
-    public List<File> getAllLibraryFiles() {
+    public List<Path> getAllLibraryFiles() {
         return validateFilesPresence(false);
     }
 
@@ -1204,8 +1257,26 @@ public class DriverDescriptor extends AbstractDescriptor implements DBPDriver {
         validateFilesPresence(true);
     }
 
+    @Override
+    public boolean needsExternalDependencies() {
+        for (DBPDriverLibrary library : libraries) {
+            if (library.isDisabled() || library.isOptional() || !library.matchesCurrentPlatform()) {
+                continue;
+            }
+            if (library.getLocalFile() == null || !Files.exists(library.getLocalFile())) {
+                return true;
+            }
+        }
+        return false;
+    }
+
     @NotNull
-    private List<File> validateFilesPresence(boolean resetVersions) {
+    private List<Path> validateFilesPresence(boolean resetVersions) {
+        if (isDistributedMode()) {
+            // We are in distributed mode
+            return syncDistributedDependencies();
+        }
+
         boolean localLibsExists = false;
         final List<DBPDriverLibrary> downloadCandidates = new ArrayList<>();
         for (DBPDriverLibrary library : libraries) {
@@ -1227,7 +1298,7 @@ public class DriverDescriptor extends AbstractDescriptor implements DBPDriver {
                         allExists = false;
                     } else {
                         for (DriverFileInfo file : files) {
-                            if (file.file == null || !file.file.exists()) {
+                            if (file.file == null || !Files.exists(file.file)) {
                                 allExists = false;
                                 break;
                             }
@@ -1241,14 +1312,6 @@ public class DriverDescriptor extends AbstractDescriptor implements DBPDriver {
                 localLibsExists = true;
             }
         }
-//        if (!CommonUtils.isEmpty(fileSources)) {
-//            for (DriverFileSource source : fileSources) {
-//                for (DriverFileSource.FileInfo fileInfo : source.getFiles()) {
-//                    DriverLibraryLocal libraryLocal = new DriverLibraryLocal(this, DBPDriverLibrary.FileType.jar, fileInfo.getName());
-//                    final File localFile = libraryLocal.getLocalFile();
-//                }
-//            }
-//        }
 
         boolean downloaded = false;
         if (!downloadCandidates.isEmpty() || (!localLibsExists && !fileSources.isEmpty())) {
@@ -1259,14 +1322,6 @@ public class DriverDescriptor extends AbstractDescriptor implements DBPDriver {
             }
             if (resetVersions) {
                 resetDriverInstance();
-
-/*
-                for (DBPDriverLibrary library : libraries) {
-                    if (!library.isDisabled()) {
-                        library.resetVersion();
-                    }
-                }
-*/
             }
             downloaded = true;
             for (DBPDriverDependencies.DependencyNode node : dependencies.getLibraryMap()) {
@@ -1277,7 +1332,7 @@ public class DriverDescriptor extends AbstractDescriptor implements DBPDriver {
             providerDescriptor.getRegistry().saveDrivers();
         }
 
-        List<File> result = new ArrayList<>();
+        List<Path> result = new ArrayList<>();
 
         for (DBPDriverLibrary library : libraries) {
             if (library.isDisabled() || !library.matchesCurrentPlatform()) {
@@ -1288,7 +1343,7 @@ public class DriverDescriptor extends AbstractDescriptor implements DBPDriver {
                 List<DriverFileInfo> files = resolvedFiles.get(library);
                 if (files != null) {
                     for (DriverFileInfo file : files) {
-                        if (file.file != null) {
+                        if (file.file != null && !result.contains(file.file)) {
                             result.add(file.file);
                         }
                     }
@@ -1297,16 +1352,27 @@ public class DriverDescriptor extends AbstractDescriptor implements DBPDriver {
                 if (library.getType() == DBPDriverLibrary.FileType.license) {
                     continue;
                 }
-                File localFile = library.getLocalFile();
+                Path localFile = library.getLocalFile();
                 if (localFile != null) {
-                    if (localFile.isDirectory()) {
-                        File[] folderFiles = localFile.listFiles((dir, name1) ->
-                            name1.endsWith(".jar") || name1.endsWith(".zip"));
-                        if (folderFiles != null) {
-                            Collections.addAll(result, folderFiles);
+                    if (Files.isDirectory(localFile)) {
+                        try {
+                            List<Path> folderFiles = Files.list(localFile)
+                                .filter(p -> {
+                                    String fileName = p.getFileName().toString();
+                                    return fileName.endsWith(".jar") || fileName.endsWith(".zip");
+                                })
+                                .collect(Collectors.toList());
+
+                            if (!folderFiles.isEmpty()) {
+                                result.addAll(folderFiles);
+                            }
+                        } catch (IOException e) {
+                            log.error("Error reading driver directory '" + localFile + "'", e);
                         }
                     }
-                    result.add(localFile);
+                    if (!result.contains(localFile)) {
+                        result.add(localFile);
+                    }
                 }
             }
         }
@@ -1314,27 +1380,85 @@ public class DriverDescriptor extends AbstractDescriptor implements DBPDriver {
         // Now check driver version
         if (DBWorkbench.getPlatform().getPreferenceStore().getBoolean(ModelPreferences.UI_DRIVERS_VERSION_UPDATE) && !downloaded) {
             // TODO: implement new version check
-/*
-            {
-                try {
-                    UIUtils.runInProgressService(monitor -> {
-                        try {
-                            checkDriverVersion(monitor);
-                        } catch (IOException e) {
-                            throw new InvocationTargetException(e);
-                        }
-                    });
-                } catch (InvocationTargetException e) {
-                    log.error(e.getTargetException());
-                } catch (InterruptedException e) {
-                    // ignore
-                }
-            }
-*/
         }
 
         // Check if local files are zip archives with jars inside
         return DriverUtils.extractZipArchives(result);
+    }
+
+    /**
+     * Sync driver libs with remote server
+     */
+    private List<Path> syncDistributedDependencies() {
+        List<Path> localFilePaths = new ArrayList<>();
+
+        final Map<DBPDriverLibrary, List<DriverFileInfo>> downloadCandidates = new LinkedHashMap<>();
+        for (DBPDriverLibrary library : libraries) {
+            if (library.isDisabled() || !library.matchesCurrentPlatform()) {
+                continue;
+            }
+            List<DriverFileInfo> files = resolvedFiles.get(library);
+            if (files != null) {
+                for (DriverFileInfo depFile : files) {
+                    Path driverFolder = getWorkspaceStorageFolder();
+                    Path localDriverFile = driverFolder.resolve(depFile.getFile());
+                    if (!Files.exists(localDriverFile) || depFile.getFileCRC() == 0 ||
+                        depFile.getFileCRC() != calculateFileCRC(localDriverFile))
+                    {
+                        downloadCandidates
+                            .computeIfAbsent(library, key -> new ArrayList<>())
+                            .add(depFile);
+                    } else {
+                        localFilePaths.add(localDriverFile);
+                    }
+                }
+            }
+        }
+
+        if (!downloadCandidates.isEmpty()) {
+            DBFileController fileController = DBWorkbench.getPlatform().getFileController();
+            for (var libEntry : downloadCandidates.entrySet()) {
+                DBPDriverLibrary library = libEntry.getKey();
+                for (DriverFileInfo fileInfo : libEntry.getValue()) {
+                    try {
+                        Path driverFolder = getWorkspaceStorageFolder();
+                        Path localDriverFile = driverFolder.resolve(fileInfo.getFile());
+                        if (!Files.exists(localDriverFile.getParent())) {
+                            Files.createDirectories(localDriverFile.getParent());
+                        }
+
+                        byte[] fileData = fileController.loadFileData(DBFileController.TYPE_DATABASE_DRIVER, fileInfo.getFile().toString());
+                        Files.write(localDriverFile, fileData, StandardOpenOption.TRUNCATE_EXISTING, StandardOpenOption.CREATE_NEW);
+
+                        localFilePaths.add(localDriverFile);
+                    } catch (Exception e) {
+                        log.error("Error downloading driver file '" + fileInfo.getFile() + "'", e);
+                    }
+                }
+            }
+        }
+
+        return localFilePaths;
+    }
+
+    public static long calculateFileCRC(Path localDriverFile) {
+        try (InputStream is = Files.newInputStream(localDriverFile)) {
+            CRC32 crc = new CRC32();
+
+            byte[] buffer = new byte[65536];
+            int bytesRead;
+            while ((bytesRead = is.read(buffer)) != -1) {
+                crc.update(buffer, 0, bytesRead);
+            }
+            return crc.getValue();
+        } catch (IOException e) {
+            log.error("Error reading file '" + localDriverFile + "', CRC calculation failed", e);
+            return 0;
+        }
+    }
+
+    Path getWorkspaceStorageFolder() {
+        return getWorkspaceDriversStorageFolder().resolve(getProviderId()).resolve(getId());
     }
 
     List<DriverFileInfo> getCachedFiles(DBPDriverLibrary library) {
@@ -1444,17 +1568,8 @@ public class DriverDescriptor extends AbstractDescriptor implements DBPDriver {
         return origFiles;
     }
 
-    public static File getDriversContribFolder() throws IOException {
-        return new File(Platform.getInstallLocation().getDataArea(DRIVERS_FOLDER).toExternalForm());
-    }
-
-    public void serialize(JsonWriter json, boolean export) throws IOException {
-        new DriverDescriptorSerializerModern(this).serialize(json, export);
-    }
-
-    @Deprecated
-    public void serialize(XMLBuilder xml, boolean export) throws IOException {
-        new DriverDescriptorSerializerLegacy(this).serialize(xml, export);
+    public Set<DBPDriverConfigurationType> getSupportedConfigurationTypes() {
+        return configurationTypes;
     }
 
     public DBPNativeClientLocation getDefaultClientLocation() {
@@ -1465,6 +1580,148 @@ public class DriverDescriptor extends AbstractDescriptor implements DBPDriver {
         return null;
     }
 
+    /**
+     * Add resolved files to all libraries
+     */
+    public boolean resolveDriverFiles(Path targetFileLocation) {
+        if (libraries.isEmpty()) {
+            return false;
+        }
+        resolvedFiles.clear();
+        for (DBPDriverLibrary library : libraries) {
+            // We need to sync resolved files with real files of library
+            // - Local files are linked directly
+            // - Local folders are linked to folder's contents
+            if (library instanceof DriverLibraryLocal) {
+                List<DriverFileInfo> libraryFiles = new ArrayList<>();
+
+                Path srcLocalFile = library.getLocalFile();
+                if (srcLocalFile == null) {
+                    log.warn("\t-Driver library file '" + library.getPath() + "' is missing");
+                    continue;
+                }
+                if (!Files.exists(srcLocalFile)) {
+                    log.warn("\tDriver library file '" + srcLocalFile.toAbsolutePath() + "' doesn't exist");
+                    continue;
+                }
+
+                String targetPath = library.getPath();
+                int divPos = targetPath.indexOf(":");
+                if (divPos != -1) {
+                    targetPath = targetPath.substring(divPos + 1);
+                    while (targetPath.startsWith("/")) targetPath = targetPath.substring(1);
+                }
+
+                if (Files.isDirectory(srcLocalFile)) {
+                    Path targetFolder = targetFileLocation.resolve(targetPath);
+                    if (!Files.exists(targetFolder)) {
+                        try {
+                            Files.createDirectories(targetFolder);
+                        } catch (IOException e) {
+                            log.error("Error creating driver target directory '" + targetFolder + "'", e);
+                            return false;
+                        }
+                    }
+
+                    try {
+                        resolveDirectories(targetFileLocation, library, srcLocalFile, targetFolder, libraryFiles);
+                    } catch (IOException e) {
+                        log.error("Error resolving directory files at '" + srcLocalFile + "'", e);
+                    }
+                } else {
+                    Path trgLocalFile = targetFileLocation.resolve(targetPath);
+                    Path trgFolder = trgLocalFile.getParent();
+                    if (!Files.exists(trgFolder)) {
+                        try {
+                            Files.createDirectories(trgFolder);
+                        } catch (IOException e) {
+                            log.error("Error creating driver file directory '" + trgFolder + "'", e);
+                        }
+                    }
+                    DriverFileInfo fileInfo = resolveFile(targetFileLocation, library, srcLocalFile, trgLocalFile);
+                    if (fileInfo != null) {
+                        libraryFiles.add(fileInfo);
+                    }
+                }
+
+                if (!libraryFiles.isEmpty()) {
+                    resolvedFiles.put(library, libraryFiles);
+                }
+
+            } else {
+                // Ignore all non-local libraries for now
+            }
+        }
+        if (resolvedFiles.isEmpty()) {
+            return false;
+        }
+        modified = true;
+        return true;
+    }
+
+    private void resolveDirectories(Path targetFileLocation, DBPDriverLibrary library, Path srcLocalFile, Path trgLocalFile, List<DriverFileInfo> libraryFiles) throws IOException {
+        if (!Files.exists(trgLocalFile)) {
+            try {
+                Files.createDirectories(trgLocalFile);
+            } catch (IOException e) {
+                log.error("Error creating driver library target directory '" + trgLocalFile + "'", e);
+                return;
+            }
+        }
+        // Resolve directory contents
+        List<Path> srcDirFiles = Files.list(srcLocalFile).collect(Collectors.toList());
+        for (Path dirFile : srcDirFiles) {
+            String fileName = dirFile.getFileName().toString();
+            // Skip non-libraries
+            if (fileName.endsWith(".txt")) {
+                continue;
+            }
+            Path trgDirFile = trgLocalFile.resolve(dirFile.getFileName());
+            if (Files.isDirectory(dirFile)) {
+                resolveDirectories(targetFileLocation, library, dirFile, trgDirFile, libraryFiles);
+            } else {
+                DriverFileInfo fileInfo = resolveFile(targetFileLocation, library, dirFile, trgDirFile);
+                if (fileInfo != null) {
+                    libraryFiles.add(fileInfo);
+                }
+            }
+        }
+    }
+
+    private DriverFileInfo resolveFile(Path targetFileLocation, DBPDriverLibrary library, Path srcLocalFile, Path trgLocalFile) {
+        Path relPath = targetFileLocation.relativize(trgLocalFile);
+        DriverFileInfo info = new DriverFileInfo(trgLocalFile.getFileName().toString(), null, library.getType(), relPath);
+        info.fileCRC = calculateFileCRC(srcLocalFile);
+        long targetCRC = Files.exists(trgLocalFile) ? calculateFileCRC(trgLocalFile) : 0;
+        if (info.fileCRC != targetCRC) {
+            // Copy file
+            try {
+                Files.copy(srcLocalFile, trgLocalFile);
+            } catch (IOException e) {
+                log.error("Error copying library file '" + srcLocalFile + "' into '" + trgLocalFile + "'", e);
+                return null;
+            }
+        }
+        return info;
+    }
+
+    @Override
+    public String toString() {
+        return name;
+    }
+
+    /////////////////////////////////////////
+    // Static utilities
+
+    public static Path getWorkspaceDriversStorageFolder() {
+        return DBWorkbench.getPlatform().getWorkspace().getMetadataFolder().resolve(DBConstants.DEFAULT_DRIVERS_FOLDER);
+    }
+
+    public static Path getDriversContribFolder() throws IOException {
+        return Path.of(Platform.getInstallLocation().getDataArea(DBConstants.DEFAULT_DRIVERS_FOLDER).toExternalForm());
+    }
+
+    @NotNull
     public static Path getCustomDriversHome() {
         Path homeFolder;
         // Try to use custom drivers path from preferences
@@ -1478,8 +1735,8 @@ public class DriverDescriptor extends AbstractDescriptor implements DBPDriver {
                 if (homeFolder != null && homeFolder.getParent() != null) {
                     homeFolder = homeFolder.getParent().resolve(DBConstants.DEFAULT_DRIVERS_FOLDER);
                 } else {
-                    log.warn("Can't find folder path for drivers");
-                    return null;
+                    log.warn("Can't find folder path for drivers. Use home folder");
+                    return RuntimeUtils.getUserHomeDir().toPath().resolve(DBConstants.DEFAULT_DRIVERS_FOLDER);
                 }
             } else {
                 homeFolder = platform.getWorkspace().getAbsolutePath().getParent().resolve(DBConstants.DEFAULT_DRIVERS_FOLDER);
@@ -1524,19 +1781,8 @@ public class DriverDescriptor extends AbstractDescriptor implements DBPDriver {
         return libraries.toArray(new String[0]);
     }
 
-    @Override
-    public String toString() {
-        return name;
-    }
-
-    private static class ReplaceInfo {
-        String providerId;
-        String driverId;
-
-        private ReplaceInfo(String providerId, String driverId) {
-            this.providerId = providerId;
-            this.driverId = driverId;
-        }
+    static boolean isDistributedMode() {
+        return DBWorkbench.getPlatform().getApplication().isDistributed();
     }
 
 }
